<resources>
    <string name="app_name">My Contact List</string>
    <string name="button_to_display_a_list_of_contacts">Button to display a list of contacts</string>
    <string name="button_to_display_map">Button to display map</string>
    <string name="button_to_display_settings">Button to display settings</string>
    <string name="save">Save</string>
    <string name="togglebutton">ToggleButton</string>
</resources>